changing the background of body to white to avoid the content-wrap div's grey background

--- a/vivo-post-1.1/themes/vivo-basic/css/visualization/entityComparison/layout.css
+++ b/vivo-post-1.1/themes/vivo-basic/css/visualization/entityComparison/layout.css
@@ -1,5 +1,9 @@
 @CHARSET "UTF-8";
 
+body{
+	background-color: white;
+}
+
 head,body {
 	font: 0.9em Helvetica;
 }
